--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@next-auth/mongodb-adapter": "^1.0.3",
+    "@react-aria/ssr": "^3.1.2",
     "babel-plugin-macros": "^3.1.0",
     "classnames": "^2.3.1",
     "fortawesome": "^0.0.1-security",
