--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@next-auth/mongodb-adapter": "^1.0.3",
-    "@react-aria/ssr": "^3.1.2",
     "babel-plugin-macros": "^3.1.0",
     "classnames": "^2.3.1",
     "fortawesome": "^0.0.1-security",
@@ -26,6 +25,7 @@
     "next": "12.1.1",
     "next-auth": "^4.3.1",
     "react": "17.0.2",
+    "react-aria": "^3.14.1",
     "react-dom": "17.0.2",
     "react-fontawesome": "^1.7.1",
     "sass": "^1.50.0"
