feat: update .env . add middleman api and test call

--- a/.env
+++ b/.env
@@ -1,7 +1,15 @@
+<!-- SPOTIFY API config -->
+
 SPOTIFY_CLIENT_ID=<client_id>
 SPOTIFY_CLIENT_SECRET=<client_secret>
+
+<!-- MONGODB config -->
 
 DB_USER=<db_user>
 DB_PASSWORD=<db_password>
 MONGODB_URI=<db_uri>
 API_URL=<api_url>
+
+<!-- Spotify middleman api -->
+
+SPOTIFY_MIDDLEMAN_API=<spotify_middleman_api>
